style(client): :lipstick: Fix count and label alignment

--- a/client/src/components/Pages/recherche/SearchHeader/Filter/Filter.module.scss
+++ b/client/src/components/Pages/recherche/SearchHeader/Filter/Filter.module.scss
@@ -54,6 +54,15 @@
 
 .checkbox {
   flex: 1 0 0;
+  align-items: start;
+}
+
+.countContainer {
+  display: flex;
+  padding-top: 4px;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .count {
